# Sistema-Ventas

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backend/: DatabaseManager.cpp  DatabaseManager.hpp  InventorySystem.cpp  InventorySystem.hpp  POSController.cpp  POSController.hpp  SettingsManager.cpp  SettingsManager.hpp
src/frontend/: AdminView.qml  Dashboard.qml  NavigationSidebar.qml  POSView.qml  PaymentDialog.qml  SettingsView.qml  main.qml
src/frontend/components/: ActionButton.qml  AlertCard.qml  AudioSystem.qml  GlassPanel.qml  SolidCard.qml  Theme.qml
